    https://github.com/bigpresh/Pod-Readme/issues
    instead of RT.

  - Added a version to all modules in the distribution, and a version
    QA test to the repo.

  [Documentation]
  - Added missing date to Changes.

  - Fixed typos in POD and README.

  - Added stub POD to Pod::Readme::Filter.

  - Fixed a daft typo in the Changes file.

v1.0.0_01 2014-09-23
  [Incompatabilities]
  - Major rewrite, using modern Perl v5.10.1.

  - This module is no longer a subclass of a POD parsing
    module. Instead, it is a simple POD filter.

  [New Features]
  - Added support for plugins.

  - Added a "changes" plugin for parsing Changes files.

  - Added a "version" plugin for including the current version.

  - Added a "requires" plugin for listing module requirements.

  - The pod2readme script has been rewritten to take a variety of
    options, and can various formats, such as HTML, Markdown, POD or
    RTF.

  [Documentation]
  - Changes rewritten to conform to CPAN::Changes::Spec.

  - README is now in Markdown format.

  [Other Changes]
  - Switched to semantic versioning.

  - Added MANIFEST.SKIP to distribution.

  - QA tests are no longer part of the distribution.

  - Makefile.PL uses Module::Install.

0.11  2010-12-09

  - Recognise the =encoding directive, rather than dying when it's
    encountered.
    TODO: actually take heed of it.
    Thanks to Ivan Bessarabov for bringing this to my attention!

0.10  2010-05-19

  - David Precious <davidp@preshweb.co.uk> taking over maintainership

  - Apply POD fix patch from RT #38328, thanks to David A. Desrosiers

0.09  2006-11-25

  - uses Regexp::Common for URI parsing for L<> tag

  - added separate check for https, ftps, and svn URIs (rt.cpan.org
    bugs 23585 and 23613)

0.081 2006-05-07

  - released package without signature, due to Module::Signature
    issues

0.08  2006-05-01

  - head3/4 headings not recognized

  - went back to using Pod::PlainText

0.07  2006-02-11
